Bug #20165
Deadlock during shutdown in PurgeQueue::_consume
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
PurgeQUeue does this while holding its lock:
journaler.wait_for_readable(new FunctionContext([this](int r) { Mutex::Locker l(lock); if (r == 0) { _consume(); } }));
But wait_for_readable does this:
if (stopping) { onreadable->complete(-EAGAIN); return; }
History
#1 Updated by John Spray over 5 years ago
- Status changed from In Progress to Fix Under Review
#2 Updated by John Spray over 5 years ago
- Status changed from Fix Under Review to Resolved