osdc: always use finisher from wait_for_readable

Fixes: http://tracker.ceph.com/issues/20165
Signed-off-by: John Spray <john.spray@redhat.com>